# Transformer-Koopman

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_training.bat  run_all_training.ps1  论文.txt
.project-log/: current-session.md  progress.md  requirements.md
.project-log/architecture/: software-architecture.md
.project-log/business-logic/: constraints.md  decision-records.md  edges.md  graph.md  main.md  nodes.md  open-questions.md
.project-log/config/: config-schema.md
.project-log/debugging/: known-issues.md
.project-log/hardware/: hardware-list.md
configs/: platform1.yaml  platform2.yaml
deploy/: README.md  export_assets.py
deploy/algorithms/: __init__.py  transformer_koopman_controller.py
deploy/algorithms/configs/: transformer_koopman_controller.json
deploy/algorithms/tk_assets/: __init__.py  transformer_koopman_lifter.py  transformer_koopman_model.py
docs/: ABLATION_DESIGN.md  QUICKSTART.md  TRADITIONAL_EDMD.md
figures/ablation/: generate_ablation_materials.py  plot_ablation.py
figures/platform1/: plot_platform1.py  plot_platform2.py
scripts/: check_model_prediction.py  encoder_inference_matlab.py  inspect_ckpt.py  smoke_e2e.py  smoke_rollout.py  smoke_test.py  test_mlp_koopman.py  test_patchtst.py  test_traditional_edmd.py  train_mlp_koopman.py  train_patchtst.py  train_traditional_edmd.py
scripts/ablation/: generate_report.py  plot_ablation_results.py  test_ablation.py  train_ablation.py
scripts/debug/: amplitude.py  encoder_output.py  state_embedded.py
src/patchtst_koopman/: __init__.py
(+38 files in other folders)
